[gd_scene load_steps=14 format=3 uid="uid://qejox0nki81w"]

[ext_resource type="Script" uid="uid://0ho56f0t08re" path="res://game/game.gd" id="1_sul5r"]
[ext_resource type="PackedScene" uid="uid://et0ngbb4rcs8" path="res://game/game_map/game_map.tscn" id="2_0sr1o"]
[ext_resource type="PackedScene" uid="uid://bgaydfvlnnd7l" path="res://game/enemy_spawner/enemy_spawner.tscn" id="2_vsp63"]
[ext_resource type="PackedScene" uid="uid://v2e7x3fbjtap" path="res://game/units/player/player.tscn" id="3_0sr1o"]
[ext_resource type="Script" uid="uid://cedqpjvaak740" path="res://game/states/player_turn.gd" id="3_bdhmt"]
[ext_resource type="Script" uid="uid://dw81mb5caitsa" path="res://game/states/enemy_turn.gd" id="4_87uf6"]
[ext_resource type="Script" path="res://game/states/win.gd" id="5_3vho3"]
[ext_resource type="PackedScene" uid="uid://bpik76b7iulsb" path="res://game/grid_select/grid_select.tscn" id="5_lfrn8"]
[ext_resource type="Script" path="res://game/states/lose.gd" id="6_3vho3"]
[ext_resource type="Script" uid="uid://brwmd6hywtyyt" path="res://addons/state_machine/state_machine.gd" id="6_5i0tg"]
[ext_resource type="PackedScene" uid="uid://d3a0ux8kxfpug" path="res://game/action_buttons/action_buttons.tscn" id="9_2a8rs"]
[ext_resource type="Theme" uid="uid://doau1vx6lmsei" path="res://resources/game_ui_theme.tres" id="9_l8g03"]
[ext_resource type="PackedScene" uid="uid://doae4q0upb8gr" path="res://game/level_counter/level_counter.tscn" id="10_qf6n1"]

[node name="Game" type="Node" node_paths=PackedStringArray("state_machine", "game_map", "player", "enemy_spawner", "game_over_screen")]
script = ExtResource("1_sul5r")
state_machine = NodePath("StateMachine")
game_map = NodePath("GameMap")
player = NodePath("Units/Player")
enemy_spawner = NodePath("EnemySpawner")
game_over_screen = NodePath("CanvasLayer/GameOverScreen")

[node name="EnemySpawner" parent="." node_paths=PackedStringArray("game_map", "player", "enemy_group", "level_counter") instance=ExtResource("2_vsp63")]
game_map = NodePath("../GameMap")
player = NodePath("../Units/Player")
enemy_group = NodePath("../Units/EnemyGroup")
level_counter = NodePath("../CanvasLayer/LevelCounter")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_5i0tg")
initial_state = NodePath("PlayerTurn")
metadata/_custom_type_script = "uid://brwmd6hywtyyt"

[node name="PlayerTurn" type="Node" parent="StateMachine" node_paths=PackedStringArray("action_buttons", "player", "enemy_group")]
script = ExtResource("3_bdhmt")
action_buttons = NodePath("../../CanvasLayer/MarginContainer/ActionButtons")
player = NodePath("../../Units/Player")
enemy_group = NodePath("../../Units/EnemyGroup")

[node name="EnemyTurn" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "game", "game_map", "enemy_group")]
script = ExtResource("4_87uf6")
player = NodePath("../../Units/Player")
game = NodePath("../..")
game_map = NodePath("../../GameMap")
enemy_group = NodePath("../../Units/EnemyGroup")

[node name="Win" type="Node" parent="StateMachine" node_paths=PackedStringArray("level_counter", "enemy_spawner")]
script = ExtResource("5_3vho3")
level_counter = NodePath("../../CanvasLayer/LevelCounter")
enemy_spawner = NodePath("../../EnemySpawner")
metadata/_custom_type_script = "uid://lyh78ppnftnq"

[node name="Lose" type="Node" parent="StateMachine"]
script = ExtResource("6_3vho3")
metadata/_custom_type_script = "uid://lyh78ppnftnq"

[node name="GameMap" parent="." node_paths=PackedStringArray("game") instance=ExtResource("2_0sr1o")]
game = NodePath("..")

[node name="GridSelect" parent="." node_paths=PackedStringArray("game_map", "player", "action_buttons") instance=ExtResource("5_lfrn8")]
game_map = NodePath("../GameMap")
player = NodePath("../Units/Player")
action_buttons = NodePath("../CanvasLayer/MarginContainer/ActionButtons")

[node name="Units" type="Node2D" parent="."]

[node name="Player" parent="Units" node_paths=PackedStringArray("game_map") instance=ExtResource("3_0sr1o")]
game_map = NodePath("../../GameMap")

[node name="EnemyGroup" type="Node2D" parent="Units"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCounter" parent="CanvasLayer" instance=ExtResource("10_qf6n1")]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -4.0
offset_right = 8.0
offset_bottom = 4.0
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_bottom = 8

[node name="ActionButtons" parent="CanvasLayer/MarginContainer" node_paths=PackedStringArray("player") instance=ExtResource("9_2a8rs")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
player = NodePath("../../../Units/Player")

[node name="GameOverScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_l8g03")

[node name="Label" type="Label" parent="CanvasLayer/GameOverScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_l8g03")
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GameOverScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("9_l8g03")
text = "restart"

[connection signal="pressed" from="CanvasLayer/GameOverScreen/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
